add_executable(book_implementation ./implementations/book_impl.cpp
        ./properties/settings.h
        ./shared/operations.h)
add_executable(mt_default_implementation ./implementations/mt_default_impl.cpp
        ./properties/settings.h
        ./shared/operations.h)
add_executable(mt_block_implementation ./implementations/mt_block_impl.cpp
        ./properties/settings.h
        ./shared/operations.h)